@@ -149,7 +149,8 @@ AC_ARG_ENABLE(autoshadow,
   [  --enable-autoshadow     enable run-time auto-detection of shadowed passwords (requires shadow)
   ],
   [ if test "$enableval" != "no" ; then
-      use_shadow="-DUSESHADOW -DAUTOSHADOW"
+      AC_DEFINE(USE_SHADOW)
+      AC_DEFINE(AUTO_SHADOW)
       force_shadow="yes"
     fi ])
 
@@ -180,7 +181,7 @@ AC_ARG_ENABLE(shadow,
       use_shadow=""
       force_shadow="no"
     else
-      use_shadow="-DUSESHADOW"
+      AC_DEFINE(USE_SHADOW)
       force_shadow="yes"
     fi ])
 
@@ -278,7 +279,7 @@ AC_CHECK_HEADERS(fcntl.h sys/ioctl.h sys/time.h unistd.h memory.h)
 if test x"$force_shadow" != xno ; then
   AC_CHECK_HEADERS(shadow.h,
     [ if test "$use_shadow" = "" && test -f /etc/shadow ; then
-        use_shadow="-DUSESHADOW"
+        AC_DEFINE(USE_SHADOW)
       fi ])
 fi
 
@@ -703,7 +704,6 @@ AC_SUBST(VERSION)
 
 AC_CONFIG_HEADER(config.h)
 
-CFLAGS="$CFLAGS $use_shadow"
 AC_OUTPUT(lib/Makefile src/Makefile modules/Makefile Makefile Make.rules
             Make.modules contrib/dist/rpm/proftpd.spec,
           [echo timestamp > stamp-h])
